--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,24 @@
     border: none;
 }
 
-/*
+#loading_overlay {
+    display: none;
+    background: rgba(0,0,0,0.7);
+    z-index: 100;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+#loading_overlay {
+    height: 100%
+}
+#loading_overlay .loader {
+    top: 25%;
+}
+
+/* Y you no work ?
 html { height: 100%; }
 body { min-height: 100%; padding: 0; }
 #navigator { height: 20px; }
@@ -15,6 +32,8 @@ body { min-height: 100%; padding: 0; }
 .note-editable {
     min-height: 300px;
 }
+
+/* Print styles */
 
 @media print {
     #navigator, .note-editor > * {
@@ -38,4 +57,62 @@ body { min-height: 100%; padding: 0; }
 
 @page {
     margin: 20mm 15mm;
+}
+
+/* Loading animation (credit to @lukehaas) */
+
+.loader:before, .loader:after, .loader {
+    border-radius: 50%;
+    width: 2.5em;
+    height: 2.5em;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation: load7 1.8s infinite ease-in-out;
+    animation: load7 1.8s infinite ease-in-out;
+}
+
+.loader {
+    margin: 8em auto;
+    font-size: 10px;
+    position: relative;
+    text-indent: -9999em;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-animation-delay: -0.16s;
+    animation-delay: -0.16s;
+}
+
+.loader:before {
+    left: -3.5em;
+    -webkit-animation-delay: -0.32s;
+    animation-delay: -0.32s;
+}
+
+.loader:after {
+    left: 3.5em;
+}
+
+.loader:before, .loader:after {
+    content: '';
+    position: absolute;
+    top: 0;
+}
+
+@-webkit-keyframes load7 {
+    0%, 80%, 100% {
+        box-shadow: 0 2.5em 0 -1.3em #ffffff;
+    }
+    40% {
+        box-shadow: 0 2.5em 0 0 #FFF;
+    }
+}
+
+@keyframes load7 {
+    0%, 80%, 100% {
+        box-shadow: 0 2.5em 0 -1.3em #ffffff;
+    }
+    40% {
+        box-shadow: 0 2.5em 0 0 #FFF;
+    }
 }
